# amzbedrock-test-with-nice-gui

./: .gitignore  campaign_names.py  config.py  descriptions.py  helpers.py  main.py  module_1.py  module_2.py  module_template_page.py  pyproject.toml  requirements.txt
group/: g_module_eight.py  g_module_five.py  g_module_four.py  g_module_one.py  g_module_seven.py  g_module_six.py  g_module_three.py  g_module_two.py
pages/: dashboard.py  group_pa.py  loginPage.py  module_template_page.py  pageHelpers.py  signupPage.py  single_pa.py
single/: module_eight.py  module_five.py  module_four.py  module_one.py  module_seven.py  module_six.py  module_three.py  module_two.py
