[tool.poetry]
name = "nick-saas-nicegui"
version = "0.1.0"
description = ""
authors = ["Khaliq Salawou <khaliqsalawoudeen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "^1.4.27"
pandas = "^2.2.2"
dateparser = "^1.2.0"
retrying = "^1.3.4"
openpyxl = "^3.1.4"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
